Correct line height on mobile

--- a/sass/text.scss
+++ b/sass/text.scss
@@ -144,7 +144,7 @@ hr {
   body {
     padding: 1rem;
     font-size: 17px;
-    line-height: 1.6;
+    line-height: 1.65;
   }
 
   main {
